# AI_Brain

./: .gitignore  .gitignore_python  .pre-commit-config.yaml  AI_BRAIN_PYTHON_PLANNING.md  AI_BRAIN_PYTHON_TASKS.md  AI_BRAIN_SYSTEM_PROMPT.md  Dockerfile.dev  EASY_USAGE_GUIDE.md  LICENSE  Makefile  README.md  README_PRODUCTION.md  README_PYTHON.md  TEST_SUITE_README.md  VALIDATION_ANALYSIS_REPORT.md  docker-compose.yml  pyproject.toml  pytest.ini  quick_validation.py  realistic_validation.py  requirements-dev.txt  requirements.txt  run_comprehensive_validation.py  setup.py  simple_validation_test.py
.github/workflows/: python-ci.yml
ai_brain_python/: __init__.py
ai_brain_python/adapters/: __init__.py  agno_adapter.py  base_adapter.py  crewai_adapter.py  langchain_adapter.py  langgraph_adapter.py  pydantic_ai_adapter.py
ai_brain_python/core/: __init__.py  config.py  exceptions.py  types.py  universal_ai_brain.py
ai_brain_python/core/cognitive_systems/: __init__.py  analogical_mapping.py  attention_management.py  causal_reasoning.py  change_stream_manager.py  cognitive_load_balancer.py  communication_protocol.py  confidence_tracking.py  context_injection.py  cultural_knowledge.py  emotional_intelligence.py  episodic_memory.py  goal_hierarchy.py  human_feedback.py  memory_decay_engine.py  metacognitive_awareness_engine.py  monitoring.py  multimodal_processing.py  notification_manager.py  safety_guardrails.py  self_improvement.py  semantic_memory.py  skill_capability.py  social_intelligence.py  temporal_planning.py  tool_interface.py  vector_search.py  workflow_orchestration.py  working_memory_manager.py
ai_brain_python/core/interfaces/: __init__.py  cognitive_system.py
ai_brain_python/core/models/: __init__.py  base_models.py  cognitive_interfaces.py  cognitive_states.py  framework_models.py  goal_hierarchy.py
ai_brain_python/embeddings/: __init__.py  openai_embedding_provider.py
ai_brain_python/features/: hybrid_search.py
ai_brain_python/providers/: embedding_providers.py
ai_brain_python/safety/: __init__.py  compliance_logger.py  hallucination_detector.py  real_time_monitor.py  safety_guardrails.py
ai_brain_python/storage/: __init__.py  base_collection.py  cache_manager.py  mongo_connection.py  mongodb_client.py  storage_manager.py  vector_store.py
ai_brain_python/storage/collections/: attention_state_collection.py  communication_protocol_collection.py  confidence_tracking_collection.py  cultural_knowledge_collection.py  emotional_state_collection.py  goal_hierarchy_collection.py  improvement_collection.py  memory_collection.py  memory_decay_stats_collection.py  metacognitive_state_collection.py  metrics_collection.py  safety_collection.py  skill_capability_collection.py  temporal_planning_collection.py  tool_interface_collection.py  tracing_collection.py  workflow_orchestration_collection.py  working_memory_collection.py
ai_brain_python/utils/: logger.py
config/: redis.conf
docs/: API_REFERENCE.md  FRAMEWORK_INTEGRATION.md  INSTALLATION.md  MIGRATION.md
docs/cognitive_systems/: OVERVIEW.md
docs/frameworks/: CREWAI_GUIDE.md  LANGCHAIN_GUIDE.md
examples/: agno_example.py  comprehensive_example.py  crewai_example.py  getting_started.py  langchain_example.py  langgraph_example.py  pydantic_ai_example.py
scripts/: mongo-init.js
tests/: conftest.py  run_tests.py
tests/comprehensive_validation/: README.md  agno_integration_test.py  full_validation.py  mongodb_vector_test.py  run_validation.py  test_suite.py
tests/integration/: test_all_cognitive_systems.py  test_core_systems_integration.py  test_framework_adapters.py
tests/performance/: test_performance.py
tests/unit/: test_cognitive_systems.py  test_safety_systems.py  test_universal_ai_brain.py
tests/unit/core/: test_universal_ai_brain.py
tests/unit/storage/: test_mongodb_client.py
